modified paths again

--- a/edit.html
+++ b/edit.html
@@ -14,7 +14,7 @@
 
     <div class="actions">
         <div class="actions__container actions__container--spaced">
-            <a href="/index.html">Notes Page</a>
+            <a href="/notesApp/index.html">Notes Page</a>
             <span id="lastEdited"></span>
         </div>
     </div>
